[gd_scene load_steps=13 format=2]

[ext_resource path="res://assets/gui/menus/main_menu/icon.png" type="Texture" id=1]
[ext_resource path="res://assets/gui/menus/main_menu/main_menu.gd" type="Script" id=2]
[ext_resource path="res://assets/gui/background_video/background_video.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/gui/menus/main_menu/assets/sounds/play_sound.wav" type="AudioStream" id=4]
[ext_resource path="res://assets/gui/menus/main_menu/assets/sounds/credits_sound.wav" type="AudioStream" id=5]
[ext_resource path="res://assets/gui/menus/main_menu/assets/sounds/click.wav" type="AudioStream" id=6]
[ext_resource path="res://assets/gui/menus/main_menu/assets/sounds/exit_sound.wav" type="AudioStream" id=7]
[ext_resource path="res://assets/gui/fonts/main_menu_font.tres" type="DynamicFont" id=8]
[ext_resource path="res://assets/gui/menus/main_menu/adkins.png" type="Texture" id=9]

[sub_resource type="CanvasItemMaterial" id=4]
particles_animation = true
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = true

[sub_resource type="DynamicFontData" id=1]
antialiased = false
font_path = "res://assets/gui/fonts/Born2bSportyV2.ttf"

[sub_resource type="DynamicFont" id=2]
font_data = SubResource( 1 )

[node name="main_menu" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
material = SubResource( 4 )
margin_left = 160.0
margin_top = -24.0
margin_right = 672.0
margin_bottom = 276.0
rect_scale = Vector2( 0.367359, 1.16384 )
color = Color( 0, 0, 0, 0.447059 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="background_video" parent="." instance=ExtResource( 3 )]

[node name="CenterContainer" type="CenterContainer" parent="."]
margin_right = 512.0
margin_bottom = 300.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 229.0
margin_top = 109.0
margin_right = 283.0
margin_bottom = 191.0
custom_constants/separation = 9

[node name="CenterContainer" type="CenterContainer" parent="CenterContainer/VBoxContainer"]
margin_right = 54.0

[node name="logo" type="Sprite" parent="CenterContainer/VBoxContainer/CenterContainer"]
position = Vector2( 27, -37 )
scale = Vector2( 0.190175, 0.190175 )
texture = ExtResource( 1 )

[node name="Label" type="TextureRect" parent="CenterContainer/VBoxContainer/CenterContainer"]
margin_left = 27.0
margin_right = 27.0
mouse_filter = 0

[node name="CenterContainer2" type="CenterContainer" parent="CenterContainer/VBoxContainer"]
margin_top = 9.0
margin_right = 54.0
margin_bottom = 32.0
rect_pivot_offset = Vector2( -13, 57 )

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer/CenterContainer2"]
margin_right = 54.0
margin_bottom = 23.0

[node name="selector" type="TextureRect" parent="CenterContainer/VBoxContainer/CenterContainer2/HBoxContainer"]
margin_right = 7.0
margin_bottom = 23.0
rect_min_size = Vector2( 7, 0 )
texture = ExtResource( 9 )
expand = true
stretch_mode = 6

[node name="selector(text" type="Label" parent="CenterContainer/VBoxContainer/CenterContainer2/HBoxContainer"]
visible = false
margin_left = 11.0
margin_top = 3.0
margin_right = 18.0
margin_bottom = 19.0
rect_min_size = Vector2( 7, 0 )
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.658824, 0.588235, 0.847059, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = ">"

[node name="start" type="Label" parent="CenterContainer/VBoxContainer/CenterContainer2/HBoxContainer"]
margin_left = 11.0
margin_right = 54.0
margin_bottom = 23.0
rect_min_size = Vector2( 43, 0 )
mouse_filter = 0
custom_fonts/font = ExtResource( 8 )
custom_colors/font_color = Color( 0.658824, 0.588235, 0.847059, 1 )
custom_colors/font_color_shadow = Color( 0.25098, 0.196078, 0.156863, 1 )
text = "Play"

[node name="CenterContainer3" type="CenterContainer" parent="CenterContainer/VBoxContainer"]
margin_top = 41.0
margin_right = 54.0
margin_bottom = 57.0

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer/CenterContainer3"]
margin_right = 54.0
margin_bottom = 16.0

[node name="selector" type="TextureRect" parent="CenterContainer/VBoxContainer/CenterContainer3/HBoxContainer"]
margin_right = 7.0
margin_bottom = 16.0
rect_min_size = Vector2( 7, 0 )
texture = ExtResource( 9 )
expand = true
stretch_mode = 6

[node name="credits" type="Label" parent="CenterContainer/VBoxContainer/CenterContainer3/HBoxContainer"]
margin_left = 11.0
margin_right = 54.0
margin_bottom = 16.0
rect_min_size = Vector2( 43, 0 )
mouse_filter = 0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.658824, 0.588235, 0.847059, 1 )
custom_colors/font_color_shadow = Color( 0.25098, 0.196078, 0.156863, 1 )
text = "Credits"

[node name="CenterContainer4" type="CenterContainer" parent="CenterContainer/VBoxContainer"]
margin_top = 66.0
margin_right = 54.0
margin_bottom = 82.0

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer/CenterContainer4"]
margin_right = 54.0
margin_bottom = 16.0
mouse_filter = 0

[node name="selector" type="TextureRect" parent="CenterContainer/VBoxContainer/CenterContainer4/HBoxContainer"]
margin_right = 7.0
margin_bottom = 16.0
rect_min_size = Vector2( 7, 0 )
texture = ExtResource( 9 )
expand = true
stretch_mode = 6

[node name="exit" type="Label" parent="CenterContainer/VBoxContainer/CenterContainer4/HBoxContainer"]
margin_left = 11.0
margin_right = 54.0
margin_bottom = 16.0
rect_min_size = Vector2( 43, 0 )
mouse_filter = 0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.933333, 0.211765, 0.219608, 1 )
custom_colors/font_color_shadow = Color( 0.25098, 0.196078, 0.156863, 1 )
text = "Exit"

[node name="sounds" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="play_button" type="AudioStreamPlayer" parent="sounds"]
stream = ExtResource( 4 )

[node name="credits_button" type="AudioStreamPlayer" parent="sounds"]
stream = ExtResource( 5 )

[node name="exit_button" type="AudioStreamPlayer" parent="sounds"]
stream = ExtResource( 7 )

[node name="mouse_button_hover" type="AudioStreamPlayer" parent="sounds"]
stream = ExtResource( 6 )
volume_db = 2.629
pitch_scale = 0.78
[connection signal="gui_input" from="CenterContainer/VBoxContainer/CenterContainer2/HBoxContainer/start" to="." method="_on_start_gui_input"]
[connection signal="mouse_entered" from="CenterContainer/VBoxContainer/CenterContainer2/HBoxContainer/start" to="." method="_on_start_mouse_entered"]
[connection signal="gui_input" from="CenterContainer/VBoxContainer/CenterContainer3/HBoxContainer/credits" to="." method="_on_credits_gui_input"]
[connection signal="mouse_entered" from="CenterContainer/VBoxContainer/CenterContainer3/HBoxContainer/credits" to="." method="_on_credits_mouse_entered"]
[connection signal="gui_input" from="CenterContainer/VBoxContainer/CenterContainer4/HBoxContainer/exit" to="." method="_on_exit_gui_input"]
[connection signal="mouse_entered" from="CenterContainer/VBoxContainer/CenterContainer4/HBoxContainer/exit" to="." method="_on_exit_mouse_entered"]
